--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-tsparticles": "^1.42.2",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4",
-    "homepage": "https://<kaif2305>.github.io/<Kaif-Portfolio>"
+    "homepage": "https://kaif2305.github.io/Kaif-Portfolio"
   },
   "scripts": {
     "start": "react-scripts start",
