--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kaif2305.github.io/Kaif-Portfolio",
   "dependencies": {
     "@react-pdf/renderer": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.2",
@@ -20,8 +21,7 @@
     "react-scripts": "5.0.0",
     "react-tsparticles": "^1.42.2",
     "typewriter-effect": "^2.18.2",
-    "web-vitals": "^2.1.4",
-    "homepage": "https://kaif2305.github.io/Kaif-Portfolio"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
